fixed the my-journey paragraph sizing on mobile

--- a/style.css
+++ b/style.css
@@ -178,16 +178,22 @@ body {
 }
 
 #journey-text {
-    width: 50%;
+    width: 60%;
     font-family: monospace;
     color: white;
     font-size: 1.3vw;
     text-align: justify;
+    justify-content: center;
 
     @media screen and (max-width:900px) {
         font-size: 3vw;
         width: 80%;
         margin-right: 2rem;
+    }
+
+    @media screen and (max-width:700px) {
+        width: 92%;
+
     }
 }
 
@@ -396,6 +402,11 @@ ul {
     width: 2vw;
     height: 2vw;
     cursor: pointer;
+
+    @media screen and (max-width: 900px) {
+        width: 6vw;
+        height: 6vw;
+    }
 }
 
 .footer-pair {
